--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 
 <img class="img" src="assets/Images/bb.jpg" alt="deux hommes penchés sur une cuve">
+<img class="img" src="assets/Images/bb.jpg" alt="deux hommes penchés sur une cuve">
+<img class="img" src="assets/Images/bb.jpg" alt="deux hommes penchés sur une cuve">
 
     <script src="assets/JS/jquery-3.5.1.min.js"></script>
     <script src="assets/JS/script.js"></script>
